[gd_scene load_steps=15 format=3 uid="uid://ybi4adbc8bjq"]

[ext_resource type="Script" path="res://Game9/UI/GameSetup/game_setup.gd" id="1_7uaxd"]
[ext_resource type="FontFile" uid="uid://0li4b5b8np1l" path="res://Game9/UI/SuperBrigade-xRoW0.otf" id="1_avr2e"]
[ext_resource type="Texture2D" uid="uid://gxudh1slydj8" path="res://Game9/UI/MainMenu/menu_back.png" id="1_iwu4o"]
[ext_resource type="Texture2D" uid="uid://cecn4yhorqcal" path="res://Game9/UI/GameSetup/track1.png" id="4_w1kxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5t7x"]
bg_color = Color(0.174028, 0.174028, 0.174028, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6cgl"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f81u3"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yura"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3oya"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5crkc"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ov0og"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jnxr"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2kxm"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j43i4"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="GameSetup" type="Control"]
texture_filter = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uaxd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_iwu4o")

[node name="Header" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v5t7x")

[node name="Label" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -25.5
offset_right = 206.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 48
text = "Race Setup"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrackSelect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -200.0
offset_right = 380.0
offset_bottom = 230.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y6cgl")

[node name="VBoxContainer" type="VBoxContainer" parent="TrackSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -20.0
offset_right = 123.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TrackSelect/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "Choose Track"
horizontal_alignment = 1

[node name="TrackName" type="Label" parent="TrackSelect/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "Rosedale Speedway"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TrackMap" type="TextureRect" parent="TrackSelect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_w1kxj")

[node name="HBoxContainer" type="HBoxContainer" parent="TrackSelect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TrackLabel" type="Label" parent="TrackSelect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "#:"

[node name="TrackNum" type="Label" parent="TrackSelect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 2

[node name="PrevTrack" type="Button" parent="TrackSelect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "<"

[node name="NextTrack" type="Button" parent="TrackSelect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = ">"

[node name="TrackDiff" type="Label" parent="TrackSelect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "Easy"

[node name="RaceOptions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -200.0
offset_right = -30.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f81u3")

[node name="VBoxContainer" type="VBoxContainer" parent="RaceOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -20.0
offset_right = 74.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Racers" type="HBoxContainer" parent="RaceOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RacersLabel" type="Label" parent="RaceOptions/VBoxContainer/Racers"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "Racers: "

[node name="Control3" type="Control" parent="RaceOptions/VBoxContainer/Racers"]
layout_mode = 2

[node name="RacersMinus" type="Button" parent="RaceOptions/VBoxContainer/Racers"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "-"

[node name="Control" type="Control" parent="RaceOptions/VBoxContainer/Racers"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="RacersNum" type="Label" parent="RaceOptions/VBoxContainer/Racers"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "4"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="RaceOptions/VBoxContainer/Racers"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="RacersPlus" type="Button" parent="RaceOptions/VBoxContainer/Racers"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "+"

[node name="Laps" type="HBoxContainer" parent="RaceOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LapsLabel" type="Label" parent="RaceOptions/VBoxContainer/Laps"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "Laps: "

[node name="Control3" type="Control" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="LapsMinus" type="Button" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "-"

[node name="Control" type="Control" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="LapsNum" type="Label" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="LapsPlus" type="Button" parent="RaceOptions/VBoxContainer/Laps"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
text = "+"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -60.0
offset_right = 230.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_4yura")
theme_override_styles/hover = SubResource("StyleBoxFlat_k3oya")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5crkc")
text = "Back"

[node name="Start" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -60.0
offset_right = -30.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.623529, 0.180392, 1)
theme_override_fonts/font = ExtResource("1_avr2e")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ov0og")
theme_override_styles/hover = SubResource("StyleBoxFlat_6jnxr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a2kxm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j43i4")
text = "Start"

[connection signal="pressed" from="TrackSelect/VBoxContainer/HBoxContainer/PrevTrack" to="." method="_on_prev_track_pressed"]
[connection signal="pressed" from="TrackSelect/VBoxContainer/HBoxContainer/NextTrack" to="." method="_on_next_track_pressed"]
[connection signal="pressed" from="RaceOptions/VBoxContainer/Racers/RacersMinus" to="." method="_on_racers_minus_pressed"]
[connection signal="pressed" from="RaceOptions/VBoxContainer/Racers/RacersPlus" to="." method="_on_racers_plus_pressed"]
[connection signal="pressed" from="RaceOptions/VBoxContainer/Laps/LapsMinus" to="." method="_on_laps_minus_pressed"]
[connection signal="pressed" from="RaceOptions/VBoxContainer/Laps/LapsPlus" to="." method="_on_laps_plus_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
